--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -3,8 +3,19 @@
 </p>
 
 
+<!-- 
+   <mat-tab-group [selectedIndex] = "selected.value" 
+                  (selectedIndexChange) ="currentTab($event)" mat-align-tabs="center">
+
+
+   </mat-tab-group> 
+-->
+
+
 <div class = "add-book-button">
   <a mat-fab color = "primary" (click) = "addBook()" style="margin-right: 14px">
    <mat-icon>add</mat-icon>
   </a>
 </div>
+
+
