added the repo link

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -2,7 +2,6 @@
   home works!
 </p>
 
-
 <!-- 
    <mat-tab-group [selectedIndex] = "selected.value" 
                   (selectedIndexChange) ="currentTab($event)" mat-align-tabs="center">
@@ -10,12 +9,14 @@
 
    </mat-tab-group> 
 -->
-
-
-<div class = "add-book-button">
-  <a mat-fab color = "primary" (click) = "addBook()" style="margin-right: 14px">
-   <mat-icon>add</mat-icon>
+<div>
+  <a mat-fab color="primary" (click)="test()" style="margin-right: 14px">
+    <mat-icon>add</mat-icon>
   </a>
 </div>
 
-
+<div class="add-book-button">
+  <a mat-fab color="primary" (click)="addBook()" style="margin-right: 14px">
+    <mat-icon>add</mat-icon>
+  </a>
+</div>
