--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -7,7 +7,7 @@
                   (selectedIndexChange) ="currentTab($event)" mat-align-tabs="center">
 
 
-   </mat-tab-group> 
+   </mat-tab-group> ///
 -->
 <div>
   <a mat-fab color="primary" (click)="test()" style="margin-right: 14px">
