--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -2,8 +2,6 @@
   home works!
 </p>
 
-
-
 <form #bookTag = "ngForm" (ngSubmit) = "searchBook(bookTag.value)"> 
   <input type = "text" name = "book_name" placeholder = "Enter book name" ngModel> 
   <br/> 
@@ -13,18 +11,14 @@
 <!-- 
    <mat-tab-group [selectedIndex] = "selected.value" 
                   (selectedIndexChange) ="currentTab($event)" mat-align-tabs="center">
-
-
    </mat-tab-group> ///
-
 -->
-
+<div>
 <a mat-fab color="primary" (click)="bookList()" style="margin-right: 14px">bookList</a>
+</div>
 
 <div>
-  <a mat-fab color="primary" (click)="test()" style="margin-right: 14px">
-    <mat-icon>add</mat-icon>
-  </a>
+  <a mat-fab color="primary" (click)="test()" style="margin-right: 14px">welcome</a>
 </div>
 
 <div class="add-book-button">
@@ -32,3 +26,5 @@
     <mat-icon>add</mat-icon>
   </a>
 </div>
+
+
