--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -35,3 +35,28 @@ p {
     border: 1px solid #B3A9A9; 
     box-sizing: border-box; 
  }
+
+ .hide_file {
+  position: absolute;
+  z-index: 1000;
+  opacity: 0;
+  cursor: pointer;
+  right: 0;
+  top: 0;
+  height: 100%;
+  font-size: 24px;
+  width: 100%;
+}
+
+.mat-button {
+  border: 1px solid royalblue;
+}
+
+
+.uploadPic{
+  position:relative;
+  text-align:center;
+  float:left;
+  cursor:pointer;
+  margin-left: 10%;
+}
