--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -51,10 +51,19 @@
   <br />
 </form>
 
-<div>
-  <!-- <img src="assets/homebg.jpg" /> -->
-</div>
+<!-- <img src="/assets/img/homebg.jpg" /> -->
+<!-- <div [ngStyle]="{ background: 'url(./assets/img/' + homebg.jpg + ')' }"></div> -->
 
-<picture>
-  <img src="assets/homebg.jpg" style="object-fit: cover;" loading="lazy" />
-</picture>
+<!-- <div
+  class="container"
+  [ngStyle]="{
+    'background-image': 'url('https://images.unsplash.com/photo-1546373542-831071838118?ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80')',
+    height: '600px',
+    'background-size': 'contain'
+  }"
+></div>
+<!-- <div class="col-4 justify-content-end">
+    <button (click)="onLogin()" class="btn btn-success">login</button>
+  </div>
+</div> -->
+-->
