--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -19,51 +19,12 @@
   <br />
 </form>
 
-<!-- 
-   <mat-tab-group [selectedIndex] = "selected.value" 
-                  (selectedIndexChange) ="currentTab($event)" mat-align-tabs="center">
-   </mat-tab-group> ///
--->
 
-<!-- <form #addTag = "ngForm" (ngSubmit) = "uploadFileToActivites(addTag.value)"> 
-  <input type = "file" name = "fileToUpload" placeholder = "upload file" ngModel> 
-  <br/> 
-  <input type = "submit" value = "submit"> 
-</form> -->
-
-<!-- <div class = "container">
+<div class = "container">
   <div class="uploadPic">
       <input  type="file" class="hide_file" (change)="handleFileInput($event.target.files)">
       <button mat-flat-button color="primary" >Upload File</button> 
   </div>
-  <button class="uploadButton" mat-button color="primary" (click)="uploadFileToActivities()">submit</button>
-</div> -->
+  <button class="uploadButton" mat-button color="primary" (click)="uploadFileToActivity()">submit</button>
+</div>
 
-<form #addBook="ngForm" (ngSubmit)="uploadFileToActivities(addBook.value)">
-  <input
-    id="uploadfile"
-    type="file"
-    name="fileToUpload"
-    placeholder="Enter book name"
-    ngModel
-  />
-  <input id="uploadBookButton" class="mybutton" type="submit" value="upload" />
-  <br />
-</form>
-
-<!-- <img src="/assets/img/homebg.jpg" /> -->
-<!-- <div [ngStyle]="{ background: 'url(./assets/img/' + homebg.jpg + ')' }"></div> -->
-
-<!-- <div
-  class="container"
-  [ngStyle]="{
-    'background-image': 'url('https://images.unsplash.com/photo-1546373542-831071838118?ixlib=rb-1.2.1&auto=format&fit=crop&w=966&q=80')',
-    height: '600px',
-    'background-size': 'contain'
-  }"
-></div>
-<!-- <div class="col-4 justify-content-end">
-    <button (click)="onLogin()" class="btn btn-success">login</button>
-  </div>
-</div> -->
--->
