home.component.ts finalized

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,6 +1,6 @@
 <div>
   <a mat-fab color="primary" (click)="bookList()" style="margin-left: 600px">bookList</a>
-  <a mat-fab color="primary" (click)="welocome()" style="margin-left: 200px">welcome</a>
+  <!-- <a mat-fab color="primary" (click)="welocome()" style="margin-left: 200px">welcome</a> -->
 </div>
 
 
