displying to UI

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,6 +1,13 @@
 <div>
-  <a mat-fab color="primary" (click)="bookList()" style="margin-left: 600px">bookList</a>
+  <a mat-fab color="primary" (click)="bookList()" style="margin-left: 600px">bookList</a><br/>
   <!-- <a mat-fab color="primary" (click)="welocome()" style="margin-left: 200px">welcome</a> -->
+  <a>If you click the bookList button, I will display all books: </a>
+  <p> {{book_list[0]}}</p>
+  <p> {{book_list[1]}}</p>
+  <p> {{book_list[2]}}</p>
+  <p> {{book_list[3]}}</p>
+  <p> {{book_list[4]}}</p>
+  
 </div>
 
 
@@ -18,6 +25,7 @@
   <input id="bookSearchButton" class="mybutton" type="submit" value="submit" />
   <br />
 </form>
+
 
 
 
