--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -14,11 +14,16 @@
   <a mat-fab color="primary" (click)="bookList()" style="margin-left: 600px">bookList</a><br/>
   <!-- <a mat-fab color="primary" (click)="welocome()" style="margin-left: 200px">welcome</a> -->
   <p>If you click the bookList button, I will display all books: </p>
-  <p> {{book_list[0]}}</p>
-  <p> {{book_list[1]}}</p>
-  <p> {{book_list[2]}}</p>
-  <p> {{book_list[3]}}</p>
-  <p> {{book_list[4]}}</p>
+
+  <div *ngIf="book_list != null">
+    
+        <p> {{book_list[0]}}</p>
+        <p> {{book_list[1]}}</p>
+        <p> {{book_list[2]}}</p>
+        <p> {{book_list[3]}}</p>
+        <p> {{book_list[4]}}</p>
+       
+  </div>
   
 </div>
 
