null value error resolved

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -16,7 +16,8 @@
   <p>If you click the bookList button, I will display all books: </p>
 
   <div *ngIf="book_list != null">
-    
+      <!-- use a for loop here to display all books
+     -->
         <p> {{book_list[0]}}</p>
         <p> {{book_list[1]}}</p>
         <p> {{book_list[2]}}</p>
