displying some popular items of library

--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -8,6 +8,13 @@ p {
   margin-bottom: 30px;
 }
 
+.main-div{
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .add-book-button {
   z-index: 5;
   position: fixed;
