--- a/src/app/home/add-book/add-book.component.html
+++ b/src/app/home/add-book/add-book.component.html
@@ -1,1 +1,9 @@
-<h1>add book page</h1>
+<div class = "container">
+    <div class="uploadPic">
+        <input  type="file" class="hide_file" (change)="handleFileInput($event.target.files)">
+        <button mat-flat-button color="primary" >Upload File</button> 
+    </div>
+    <button class="uploadButton" mat-button color="primary" (click)="uploadFileToActivity()">submit</button>
+  </div>
+  
+  
