--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -91,3 +91,10 @@ input[type="submit"] {
 body {
   background: url("/assets/img/homegb.jpg") no-repeat center center fixed;
 }
+
+table {
+  border: 1px solid black;
+  margin-left: auto;
+  margin-right: auto;
+  text-align: center;
+}
