--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -15,11 +15,21 @@
   <div *ngIf="book_list != null">
       <!-- use a for loop here to display all books
      -->
-        <p> {{book_list[0]}}</p>
-        <p> {{book_list[1]}}</p>
-        <p> {{book_list[2]}}</p>
-        <p> {{book_list[3]}}</p>
-        <p> {{book_list[4]}}</p>
+       <p> 
+          <button (click)=download_a_book(book_list[0])> {{book_list[0]}} </button>
+      </p>
+      <p> 
+          <button (click)=download_a_book(book_list[1])> {{book_list[1]}} </button>
+      </p>
+      <p> 
+          <button (click)=download_a_book(book_list[2])> {{book_list[2]}}</button>
+      </p>
+      <p> 
+          <button (click)=download_a_book(book_list[3])> {{book_list[3]}}</button>
+      </p>
+      <p> 
+          <button (click)=download_a_book(book_list[4])> {{book_list[4]}}</button>
+      </p>
        
   </div>
   
@@ -33,8 +43,6 @@
 </div>
 
 
-
-<button (click)="download_a_book()">download</button>
 
 
 
