form center-aline

--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -43,3 +43,10 @@ p {
   margin-left: 80%;
 }
 
+/* .search {
+  position: relative;
+  text-align: center;
+  float: right;
+  cursor: pointer;
+  margin-left: 10%;
+} */
