--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -2,6 +2,11 @@
 <div class="form">
     <form #bookTag="ngForm" (ngSubmit)="searchBook(bookTag.value)">
       <input type="text" name="book_name" placeholder="Enter book name" ngModel />
+    
+    <!-- <button class="search">
+      <mat-icon>search</mat-icon>
+    </button> -->
+
     </form>
 </div>  
 
