--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -23,7 +23,7 @@
         <div *ngIf= "book_name != null">
             <p> Your searched book :</p>
             <p> 
-                {{book_list[0]}}  <button (click)=download_a_book(book_list[0]) class="fa fa-download"></button>
+                {{book_name}}  <button (click)=download_a_book(book_list[0]) class="fa fa-download"></button>
             </p>
           </div>
     
