--- a/src/app/home/add-book/add-book.component.css
+++ b/src/app/home/add-book/add-book.component.css
@@ -1,4 +1,4 @@
-p {
+/* p {
     padding: 16px;
     text-align: center;
   }
@@ -91,4 +91,4 @@ p {
   body {
     background: url("/assets/img/homegb.jpg") no-repeat center center fixed;
   }
-  
+   */
