--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -12,7 +12,7 @@
 
 
   <p>Some available books of our library: </p>
-  <div *ngIf="book_list != null">
+  <div *ngIf="book_list != null" class="mat-body-2">
       <!-- use a for loop here to display all books
      -->
        <p> 
@@ -36,7 +36,10 @@
 
 
 
-<div class="add-book-button">
+
+
+<div>
+  <div class="add-book-button">
   <a mat-fab color="primary" (click)="addBook()" style="margin-right: 14px">
     <mat-icon>add</mat-icon>
   </a>
