--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,4 @@
 @import "~ng-pick-datetime/assets/style/picker.min.css";
+
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
