--- a/src/app/home/dialogPopUp/dialogPopUp.component.html
+++ b/src/app/home/dialogPopUp/dialogPopUp.component.html
@@ -1,13 +1,12 @@
 <h2 mat-dialog-title style="text-align: center;">Add a Book to NYC Library</h2>
 
-<mat-dialog-content>The file to be uploaded must be in pdf, epub, mobi, or azw formats.</mat-dialog-content>
+<mat-dialog-content>The file to be uploaded must be in pdf, epub, mobi, or azw book formats.</mat-dialog-content>
 <br>
 
 <mat-dialog-content>
   
     <div class="uploadPic">
         <input  type="file" class="hide_file" (change)="handleFileInput($event.target.files)">
-        <!-- <button mat-flat-button color="primary" >Upload File</button>  -->
     </div>
  
 </mat-dialog-content>
@@ -19,4 +18,3 @@
     
 </mat-dialog-actions>
 
-<!-- [formGroup]="form" -->
