--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -3,9 +3,23 @@ p {
   text-align: center;
 }
 
+.background{
+  height: 100vh;
+  width: 100%;
+  background: url('https://images.pexels.com/photos/1563564/pexels-photo-1563564.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') no-repeat;
+  background-size: cover;
+  color: white;
+}
+
 .book {
   margin-top: 25px;
   margin-bottom: 30px;
+}
+
+.mat-card-cvr{ 
+  top:50%; 
+  width:100%; text-align:center; 
+  position:fixed; 
 }
 
 .add-book-button {
@@ -26,6 +40,7 @@ input[type="text"] {
   border: 1px solid #b3a9a9;
   box-sizing: border-box;
 }
+
 input[type="submit"] {
   padding: 12px 20px;
   display: inline-block;
@@ -35,8 +50,8 @@ input[type="submit"] {
 
 #bookSearchButton {
   margin: 8px -500px;
-  background-color: white;
-  color: black;
+  background-color: #B92E10;
+  color: white;
   border: 2px solid #555555;
   border-radius: 8px;
   -webkit-transition-duration: 0.4s;
@@ -86,15 +101,4 @@ input[type="submit"] {
   float: left;
   cursor: pointer;
   margin-left: 10%;
-}
-
-body {
-  background: url("/assets/img/homegb.jpg") no-repeat center center fixed;
-}
-
-table {
-  border: 1px solid black;
-  margin-left: auto;
-  margin-right: auto;
-  text-align: center;
 }
