--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,60 +1,49 @@
-<!-- <div>
-  <a mat-fab color="primary" (click)="bookList()" style="margin-left: 600px"
-    >bookList
-  </a>
+<div class="background">
 
-  <a mat-fab color="primary" (click)="welocome()" style="margin-left: 200px"
-    >welcome</a
-  >
-</div> -->
-
-<div class="add-book-button">
-  <a mat-fab color="primary" (click)="addBook()" style="margin-right: 14px">
-    <mat-icon>add</mat-icon>
-  </a>
-</div>
-
-<form #bookTag="ngForm" (ngSubmit)="searchBook(bookTag.value)">
-  <input type="text" name="book_name" placeholder="Enter book name" ngModel />
-  <input id="bookSearchButton" class="mybutton" type="submit" value="submit" />
-  <br />
-</form>
-
-<!-- <div class="container">
-  <div class="uploadPic">
-    <input
-      type="file"
-      class="hide_file"
-      (change)="handleFileInput($event.target.files)"
-    />
-    <button mat-flat-button color="primary">Upload File</button>
+  <div>
+  
+    <form #bookTag="ngForm" (ngSubmit)="searchBook(bookTag.value)">
+      <input type="text" name="book_name" placeholder="Enter book name" ngModel />
+      <input id="bookSearchButton" class="mybutton" type="submit" value="submit" />
+      <br />
+    </form>
+  
   </div>
-  <button
-    class="uploadButton"
-    mat-button
-    color="primary"
-    (click)="uploadFileToActivity()"
-  >
-    submit
-  </button>
-</div> -->
-
-<br />
-<table>
-  <ul>
-    <tr>
-      <th>Book/s name</th>
-    </tr>
-
-    <li *ngFor="let book of book_list | slice: 0:5; let i = index">
-      <tr>
-        <th>{{ i + 1 }} - {{ book }}</th>
-      </tr>
-    </li>
-  </ul>
-</table>
-<div class="add-book-button">
-  <a mat-fab color="primary" (click)="addBook()" style="margin-right: 14px">
-    <mat-icon>add</mat-icon>
-  </a>
-</div>
+  
+  
+  <div style="color: black">
+  <h2><p>Some available books of our library: </p></h2>
+  </div>
+    <div *ngIf="book_list != null">
+        <!-- use a for loop here to display all books
+       -->
+         <p>
+            <button (click)=download_a_book(book_list[0])> {{book_list[0]}} </button>
+        </p>
+        <p>
+            <button (click)=download_a_book(book_list[1])> {{book_list[1]}} </button>
+        </p>
+        <p>
+            <button (click)=download_a_book(book_list[2])> {{book_list[2]}}</button>
+        </p>
+        <p>
+            <button (click)=download_a_book(book_list[3])> {{book_list[3]}}</button>
+        </p>
+        <p>
+            <button (click)=download_a_book(book_list[4])> {{book_list[4]}}</button>
+        </p>
+  
+    </div>
+    
+  
+  
+  
+  <div class="add-book-button">
+    <a mat-fab color="primary" (click)="addBook()" style="margin-right: 14px">
+      <mat-icon>add</mat-icon>
+    </a>
+  </div>
+  
+  
+  </div>
+  
