--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,43 +1,72 @@
 
-<div style=" border-left: 50px solid white;">
     
-  <a>Tushar Malakar</a> <br>
-    <a>Major : Computer Science</a> <br>
-    <a>Hunter College, Class: 2019-20</a> <br>
-    <a>Hackathon 2019 3rd Place Winner.</a> <br>
-    <img src='assets/img/crown.jpg' width="200" height="200">
     
-    <div>
-        <a href="https://github.com/TusharMalakar">
-          <i class="fa fa-github" style="font-size:30px; color:rgb(153, 135, 161) "> &nbsp; </i>
-        </a>
+    <div style=
+      "width: 50%;
+      height:40px;
+      border-left: 50px solid whitesmoke;
+      margin: 0 auto;">
 
-        <a href="https://www.linkedin.com/in/tushar-malakar-abab17139/">
-          <i class="fa fa-linkedin" style="font-size:30px; color:darkblue">  &nbsp; </i>
-        </a>
-
-        <a href="https://github.com/TusharMalakar/cuny2x/blob/master/Resume.pdf">
-          <img src="assets/img/crown.jpg" alt="Avatar" class="avatar"> &nbsp;
-        </a>
-
-        <a href="https://devpost.com/TusharMalakar?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">
-          <img src="https://img.icons8.com/material/30/000000/devpost.png">
-        </a>
+      <h3><img src="assets/images.png" style="  vertical-align: middle;
+        width: 40px;
+        height: 40px;
+        border-radius: 40%;"/> NYC Virtual Library Group</h3>
     </div>
 
-</div> <br>
 
 
-  
+<div class="box">
+  <div class="one">
+          <a>Tushar Malakar</a> <br>
+          <a>Major : Computer Science</a> <br>
+          <a>Hunter College, Class: 2019-20</a> <br>
+          <a>Hackathon 2019 3rd Place Winner.</a> <br>
+          <img src='assets/img/crown.jpg' width="240" height="240">  <br>
 
-<!-- <mat-toolbar>  
-    <mat-toolbar-row>
-      <span>First Row</span>
-    </mat-toolbar-row>
-  
-    <mat-toolbar-row>
-      <span>Second Row</span>
-    </mat-toolbar-row>
-  </mat-toolbar> -->
+          <a href="https://www.linkedin.com/in/tushar-malakar-abab17139/">
+            <i class="fa fa-linkedin" style="font-size:36px; color:darkblue">  &nbsp; </i>
+          </a>
+          <a href="https://devpost.com/TusharMalakar?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">
+            <img src="https://img.icons8.com/material/30/000000/devpost.png">
+          </a>
+          &nbsp; 
+          <a href="https://github.com/TusharMalakar">
+              <i class="fa fa-github" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
+            </a>
+            <a href="https://github.com/TusharMalakar/cuny2x/blob/master/Resume.pdf">
+              <i class="fa fa-file-pdf-o" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
+            </a> 
+  </div> &nbsp; &nbsp;
 
+  <div class="two">
+      
+          <a>FirstName LastName</a> <br>
+          <a>Major : Computer Science</a> <br>
+          <a>Hunter College, Class: 2019-20</a> <br>
+          <a>Hackathon 2019 3rd Place Winner.</a> <br>
+          <img src='assets/img/crown2.jpg' width="240" height="240">    
+    
+      
+  </div> &nbsp; &nbsp;
 
+  <div class="three">
+     
+          <a>FirstName LastName</a> <br>
+          <a>Major : Computer Science</a> <br>
+          <a>Hunter College, Class: 2019-20</a> <br>
+          <a>Hackathon 2019 3rd Place Winner.</a> <br>
+          <img src='assets/img/crown3.jpg' width="240" height="240">    
+      
+  </div> &nbsp; &nbsp;
+        
+  <div class="four">
+      <div>
+          <a>FirstName LastName</a> <br>
+          <a>Major : Computer Science</a> <br>
+          <a>Hunter College, Class: 2019-20</a> <br>
+          <a>Hackathon 2019 3rd Place Winner.</a> <br>
+          <img src='assets/img/crown4.jpg' width="240" height="240">    
+      </div> 
+  </div> &nbsp; &nbsp;
+
+</div>
