--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -22,7 +22,6 @@
           <a>Hunter College, Class: 2019-20</a> <br>
           <a>Hackathon 2019 3rd Place Winner.</a> <br>
           <img src='assets/img/crown.jpg' width="240" height="240">  <br>
-
           <a href="https://www.linkedin.com/in/tushar-malakar-abab17139/">
             <i class="fa fa-linkedin" style="font-size:36px; color:darkblue">  &nbsp; </i>
           </a>
@@ -44,7 +43,20 @@
           <a>Major : Computer Science</a> <br>
           <a>Hunter College, Class: 2019-20</a> <br>
           <a>Hackathon 2019 3rd Place Winner.</a> <br>
-          <img src='assets/img/crown2.jpg' width="240" height="240">    
+          <img src='assets/img/crown2.jpg' width="240" height="240"> <br>
+          <a href="https://www.linkedin.com/in/tushar-malakar-abab17139/">
+            <i class="fa fa-linkedin" style="font-size:36px; color:darkblue">  &nbsp; </i>
+          </a>
+          <a href="https://devpost.com/TusharMalakar?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">
+            <img src="https://img.icons8.com/material/30/000000/devpost.png">
+          </a>
+          &nbsp; 
+          <a href="https://github.com/TusharMalakar">
+              <i class="fa fa-github" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
+          </a>
+          <a href="https://github.com/TusharMalakar/cuny2x/blob/master/Resume.pdf">
+            <i class="fa fa-file-pdf-o" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
+          </a>   
     
       
   </div> &nbsp; &nbsp;
@@ -55,7 +67,20 @@
           <a>Major : Computer Science</a> <br>
           <a>Hunter College, Class: 2019-20</a> <br>
           <a>Hackathon 2019 3rd Place Winner.</a> <br>
-          <img src='assets/img/crown3.jpg' width="240" height="240">    
+          <img src='assets/img/crown3.jpg' width="240" height="240">  <br>
+          <a href="https://www.linkedin.com/in/tushar-malakar-abab17139/">
+            <i class="fa fa-linkedin" style="font-size:36px; color:darkblue">  &nbsp; </i>
+          </a>
+          <a href="https://devpost.com/TusharMalakar?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">
+            <img src="https://img.icons8.com/material/30/000000/devpost.png">
+          </a>
+          &nbsp; 
+          <a href="https://github.com/TusharMalakar">
+              <i class="fa fa-github" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
+          </a>
+          <a href="https://github.com/TusharMalakar/cuny2x/blob/master/Resume.pdf">
+            <i class="fa fa-file-pdf-o" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
+          </a>   
       
   </div> &nbsp; &nbsp;
         
@@ -65,7 +90,20 @@
           <a>Major : Computer Science</a> <br>
           <a>Hunter College, Class: 2019-20</a> <br>
           <a>Hackathon 2019 3rd Place Winner.</a> <br>
-          <img src='assets/img/crown4.jpg' width="240" height="240">    
+          <img src='assets/img/crown4.jpg' width="240" height="240">  <br>
+          <a href="https://www.linkedin.com/in/tushar-malakar-abab17139/">
+            <i class="fa fa-linkedin" style="font-size:36px; color:darkblue">  &nbsp; </i>
+          </a>
+          <a href="https://devpost.com/TusharMalakar?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">
+            <img src="https://img.icons8.com/material/30/000000/devpost.png">
+          </a>
+          &nbsp; 
+          <a href="https://github.com/TusharMalakar">
+              <i class="fa fa-github" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
+          </a>
+          <a href="https://github.com/TusharMalakar/cuny2x/blob/master/Resume.pdf">
+            <i class="fa fa-file-pdf-o" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
+          </a>  
       </div> 
   </div> &nbsp; &nbsp;
 
