--- a/src/app/home/about/about.component.css
+++ b/src/app/home/about/about.component.css
@@ -10,18 +10,18 @@
     flex-wrap: wrap;
     border-left: 50px solid white;
   }
-  .one {
+  .tushar {
     flex: 1;
   }
 
-  .two {
+  .ali {
     flex: 1;
   }
 
-  .three {
+  .eugine {
     flex: 1;
   }
-  .four {
+  .sally {
     flex: 1;
   }
   
