--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -1,22 +1,20 @@
 
     
-    
-    <div style=
-      "width: 50%;
-      height:40px;
-      border-left: 50px solid whitesmoke;
-      margin: 0 auto;">
+<div style=
+  "width: 50%;
+  height:40px;
+  border-left: 50px solid whitesmoke;
+  margin: 0 auto;">
 
-      <h3><img src="assets/images.png" style="  vertical-align: middle;
-        width: 40px;
-        height: 40px;
-        border-radius: 40%;"/> NYC Virtual Library Group</h3>
-    </div>
-
+  <h3><img src="assets/images.png" style="  vertical-align: middle;
+    width: 40px;
+    height: 40px;
+    border-radius: 40%;"/> NYC Virtual Library Group</h3>
+</div>
 
 
 <div class="box">
-  <div class="one">
+  <div class="tushar">
           <a>Tushar Malakar</a> <br>
           <a>Major : Computer Science</a> <br>
           <a>Hunter College, Class: 2019-20</a> <br>
@@ -37,7 +35,7 @@
             </a> 
   </div> &nbsp; &nbsp;
 
-  <div class="two">
+  <div class="ali">
       
           <a>FirstName LastName</a> <br>
           <a>Major : Computer Science</a> <br>
@@ -61,7 +59,7 @@
       
   </div> &nbsp; &nbsp;
 
-  <div class="three">
+  <div class="eugine">
      
           <a>FirstName LastName</a> <br>
           <a>Major : Computer Science</a> <br>
@@ -84,7 +82,7 @@
       
   </div> &nbsp; &nbsp;
         
-  <div class="four">
+  <div class="sally">
       <div>
           <a>FirstName LastName</a> <br>
           <a>Major : Computer Science</a> <br>
