--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -10,7 +10,7 @@
               <button mat-icon-button (click) = "drawer.toggle()">
                       <mat-icon>menu</mat-icon>
               </button>
-              <button mat-button routerLink="/home">NYC Virtual Library</button>
+              <button mat-button routerLink="">NYC Virtual Library</button>
        
               <span class="spacer"></span>
               
