--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -24,7 +24,7 @@
   </div>
   
   <mat-drawer #drawer class="sidenav">
-          <button mat-menu-item routerLink="/home">
+          <button mat-menu-item routerLink="">
             <mat-icon>home</mat-icon>
             <span>Home</span>
           </button> 
