worked on about page

--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -3,13 +3,14 @@
 <div style=
   "width: 50%;
   height:40px;
-  border-left: 50px solid whitesmoke;
+  border-left: 0px solid whitesmoke;
   margin: 0 auto;">
 
   <h3><img src="assets/images.png" style="  vertical-align: middle;
     width: 40px;
     height: 40px;
-    border-radius: 40%;"/> NYC Virtual Library Group</h3>
+    border-radius: 40%;
+    margin-left: 170px;"/> NYC Virtual Library Group</h3>
 </div>
 
 
@@ -37,22 +38,22 @@
 
   <div class="ali">
       
-          <a>FirstName LastName</a> <br>
+          <a>Ali Almashhadani</a> <br>
           <a>Major : Computer Science</a> <br>
           <a>Hunter College, Class: 2019-20</a> <br>
-          <a>Hackathon 2019 3rd Place Winner.</a> <br>
+          <a>HBO Intern</a> <br>
           <img src='assets/img/crown2.jpg' width="240" height="240"> <br>
-          <a href="https://www.linkedin.com/in/tushar-malakar-abab17139/">
+          <a href="https://www.linkedin.com/in/ali-almashhadani-431037122/">
             <i class="fa fa-linkedin" style="font-size:36px; color:darkblue">  &nbsp; </i>
           </a>
-          <a href="https://devpost.com/TusharMalakar?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">
+          <a href="">
             <img src="https://img.icons8.com/material/30/000000/devpost.png">
           </a>
           &nbsp; 
-          <a href="https://github.com/TusharMalakar">
+          <a href="https://github.com/alialmashhadani89">
               <i class="fa fa-github" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
           </a>
-          <a href="https://github.com/TusharMalakar/cuny2x/blob/master/Resume.pdf">
+          <a href="https://github.com/alialmashhadani89/Resume/blob/master/Ali%20Almashhadani%20Resume%202019-6-8.pdf">
             <i class="fa fa-file-pdf-o" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
           </a>   
     
@@ -61,10 +62,10 @@
 
   <div class="eugine">
      
-          <a>FirstName LastName</a> <br>
+          <a>Eugene Sajo</a> <br>
           <a>Major : Computer Science</a> <br>
-          <a>Hunter College, Class: 2019-20</a> <br>
-          <a>Hackathon 2019 3rd Place Winner.</a> <br>
+          <a>Hunter College, Class: 2020</a> <br>
+          <a>Apple guy</a> <br>
           <img src='assets/img/crown3.jpg' width="240" height="240">  <br>
           <a href="https://www.linkedin.com/in/tushar-malakar-abab17139/">
             <i class="fa fa-linkedin" style="font-size:36px; color:darkblue">  &nbsp; </i>
@@ -84,22 +85,22 @@
         
   <div class="sally">
       <div>
-          <a>FirstName LastName</a> <br>
+          <a>Songlin Xuan</a> <br>
           <a>Major : Computer Science</a> <br>
           <a>Hunter College, Class: 2019-20</a> <br>
-          <a>Hackathon 2019 3rd Place Winner.</a> <br>
+          <a>Q/A Testing</a> <br>
           <img src='assets/img/crown4.jpg' width="240" height="240">  <br>
-          <a href="https://www.linkedin.com/in/tushar-malakar-abab17139/">
+          <a href="https://www.linkedin.com/in/sally-xuan-0ab004a1/">
             <i class="fa fa-linkedin" style="font-size:36px; color:darkblue">  &nbsp; </i>
           </a>
-          <a href="https://devpost.com/TusharMalakar?ref_content=user-portfolio&ref_feature=portfolio&ref_medium=global-nav">
+          <a href="">
             <img src="https://img.icons8.com/material/30/000000/devpost.png">
           </a>
           &nbsp; 
-          <a href="https://github.com/TusharMalakar">
+          <a href="https://github.com/SallyXuan">
               <i class="fa fa-github" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
           </a>
-          <a href="https://github.com/TusharMalakar/cuny2x/blob/master/Resume.pdf">
+          <a href="">
             <i class="fa fa-file-pdf-o" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
           </a>  
       </div> 
