fixed sally info

--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -85,10 +85,10 @@
         
   <div class="sally">
       <div>
-          <a>Songlin Xuan</a> <br>
+          <a>Songling Xuan</a> <br>
           <a>Major : Computer Science</a> <br>
           <a>Hunter College, Class: 2019-20</a> <br>
-          <a>Q/A Testing</a> <br>
+          <a>NHN - QA/Testing</a> <br>
           <img src='assets/img/crown4.jpg' width="240" height="240">  <br>
           <a href="https://www.linkedin.com/in/sally-xuan-0ab004a1/">
             <i class="fa fa-linkedin" style="font-size:36px; color:darkblue">  &nbsp; </i>
