--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -1,25 +1,36 @@
+input[type=text], select {
+  width: 100%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+}
+
+input[type=submit] {
+  width: 100%;
+  background-color: #4CAF50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+.form {
+  border-radius: 5px;
+  padding: 50px;
+}
+
 p {
   padding: 16px;
   text-align: center;
-}
-
-.background{
-  height: 100vh;
-  width: 100%;
-  background: url('https://images.pexels.com/photos/1563564/pexels-photo-1563564.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260') no-repeat;
-  background-size: cover;
-  color: white;
-}
-
-.book {
-  margin-top: 25px;
-  margin-bottom: 30px;
-}
-
-.mat-card-cvr{
-  top:50%;
-  width:100%; text-align:center;
-  position:fixed;
 }
 
 .add-book-button {
@@ -32,73 +43,10 @@ p {
   margin-left: 80%;
 }
 
-input[type="text"] {
-  width: 30%;
-  padding: 12px 20px;
-  margin: 50px 500px;
-  display: inline-block;
-  border: 1px solid #b3a9a9;
-  box-sizing: border-box;
-}
-
-input[type="submit"] {
-  padding: 12px 20px;
-  display: inline-block;
-  border: 1px solid #b3a9a9;
-  box-sizing: border-box;
-}
-
-#bookSearchButton {
-  margin: 8px -500px;
-  background-color: #B92E10;
-  color: white;
-  border: 2px solid #555555;
-  border-radius: 8px;
-  -webkit-transition-duration: 0.4s;
-}
-
-#bookSearchButton:hover {
-  background-color: royalblue;
-  color: white;
-}
-
-#uploadBookButton {
-  background-color: white;
-  color: black;
-  border: 2px solid #555555;
-  border-radius: 8px;
-  -webkit-transition-duration: 0.4s;
-}
-
-#uploadBookButton:hover {
-  background-color: royalblue;
-  color: white;
-}
-
-#uploadfile {
-  margin-left: 550px;
-}
-
-.hide_file {
-  position: absolute;
-  z-index: 1000;
-  opacity: 0;
-  cursor: pointer;
-  right: 0;
-  top: 0;
-  height: 100%;
-  font-size: 24px;
-  width: 100%;
-}
-
-.mat-button {
-  border: 1px solid royalblue;
-}
-
-.uploadPic {
+/* .search {
   position: relative;
   text-align: center;
-  float: left;
+  float: right;
   cursor: pointer;
   margin-left: 10%;
-}
+} */
