PopUP and About

--- a/src/app/home/about/about.component.html
+++ b/src/app/home/about/about.component.html
@@ -62,10 +62,10 @@
 
   <div class="eugine">
      
-          <a>Eugene Sajo</a> <br>
+          <a>Eugene Sajor</a> <br>
           <a>Major : Computer Science</a> <br>
           <a>Hunter College, Class: 2020</a> <br>
-          <a>Apple guy</a> <br>
+          <a>Swift Developer</a> <br>
           <img src='assets/img/crown3.jpg' width="240" height="240">  <br>
           <a href="https://www.linkedin.com/in/tushar-malakar-abab17139/">
             <i class="fa fa-linkedin" style="font-size:36px; color:darkblue">  &nbsp; </i>
@@ -74,7 +74,7 @@
             <img src="https://img.icons8.com/material/30/000000/devpost.png">
           </a>
           &nbsp; 
-          <a href="https://github.com/TusharMalakar">
+          <a href="https://github.com/EugeneSajor43">
               <i class="fa fa-github" style="font-size:36px; color:rgb(153, 135, 161) "> &nbsp; </i>
           </a>
           <a href="https://github.com/TusharMalakar/cuny2x/blob/master/Resume.pdf">
