--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -1,19 +1,18 @@
 input[type=text], select {
-  width: 100%;
-  padding: 12px 20px;
-  margin: 8px 0;
+  width: 50%;
+  padding: 14px 20px;
+  margin-left: 290px;
   display: inline-block;
-  border: 1px solid #ccc;
+  border: 1px solid #b3a9a9;
   border-radius: 4px;
   box-sizing: border-box;
 }
 
 input[type=submit] {
-  width: 100%;
   background-color: #4CAF50;
   color: white;
   padding: 14px 20px;
-  margin: 8px 0;
+  display: inline-block;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -50,3 +49,19 @@ p {
   cursor: pointer;
   margin-left: 10%;
 } */
+
+
+#bookSearchButton {
+  margin-right:50px;
+  background-color: #B92E10;
+  color: white;
+  border: 2px solid #555555;
+  border-radius: 8px;
+  -webkit-transition-duration: 0.4s;
+}
+
+
+#bookSearchButton:hover {
+  background-color: royalblue;
+  color: white;
+}
