added submit button

--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -1,7 +1,7 @@
 <div class="form">
   <form #bookTag="ngForm" (ngSubmit)="searchBook(bookTag.value)">
     <input type="text" name="book_name" placeholder="Search a book" ngModel />
-
+     <input id="bookSearchButton" type="submit" value="submit" />
   <!-- <button class="search">
     <mat-icon>search</mat-icon>
   </button> -->
