--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -47,8 +47,8 @@
     <div *ngIf="book_list != null">
           <h2><p> Available Books in our Library: </p></h2>
        <section class="bookBorder"> 
-         <h3 *ngFor="let book of book_list; let i = index" class="blist">
-              {{book}}  <button (click)=download_a_book(book_list[i]) class="fa fa-download"></button>    
+         <h3 *ngFor="let number of [0,1,2,3,4]" class="blist">
+              {{book_list[number]}}  <button (click)=download_a_book(book_list[number]) class="fa fa-download"></button>    
          </h3>
         
         </section>
